# app_template

./: CLAUDE.md  README.md  app_template.code-workspace
apps/frontend/: package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.vue  templateServiceClient.ts
apps/frontend/src/api/loginClient/: loginClientOperations.ts
apps/frontend/src/components/: HelloWorld.vue
apps/frontend/src/models/: models.ts
apps/frontend/src/models/internal/: serializers.ts
apps/frontend/src/router/: index.ts
apps/frontend/src/views/: OAuthView.vue
apps/services/: .env_template  Cargo.toml
apps/services/api/: Cargo.toml
apps/services/api/src/: controllers.rs  error.rs  main.rs
apps/services/api/src/controllers/: logins.rs
apps/services/api/src/controllers/logins/: create.rs  delete.rs
apps/services/crates/common/: Cargo.toml
apps/services/crates/common/src/: config.rs
apps/services/crates/google_login/: Cargo.toml
apps/services/crates/google_login/src/: error.rs  lib.rs
cli/: atmp.sh
cli/commands/typespec/: frontend.sh
development/: docker-compose.yaml
docs/typespec/: main.tsp  move.sh
