[workspace]
resolver = "2"

members = [
    "crates/*",
    "api",
]

[workspace.dependencies]
axum = "0.8"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.15.0"
dotenv = "0.15.0"
openidconnect = "4.0.0"
serde = { version = "1", features=["derive"]}
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-sessions = { version = "0.14.0", features = ["private"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }